SANDWICH / Correct z-index in .sandwich__header

--- a/css/main.css
+++ b/css/main.css
@@ -995,6 +995,7 @@ img {
 .sandwich__header {
   margin-bottom: 50px;
   position: relative;
+  z-index: 1;
   display: grid;
   justify-items: center;
   max-width: 460px;
@@ -1027,6 +1028,10 @@ img {
   letter-spacing: 1.4px;
   text-transform: uppercase;
   color: #a47d5e;
+}
+.sandwich-testimonial-picture {
+  max-width: 845px;
+  border: 12px solid #fff;
 }
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
