--- a/less/blocks/_sandwich.less
+++ b/less/blocks/_sandwich.less
@@ -52,6 +52,7 @@
 .sandwich__header {
     margin-bottom: 50px;
     position: relative;
+    z-index: 1;
     display: grid;
     justify-items: center;
     max-width: 460px;
@@ -69,8 +70,6 @@
         background-image: url(/img/pancakes/windmill.png);
         background-size: 115px 122px;
         background-repeat: no-repeat;
-    
-        
     }
 
 }
@@ -91,4 +90,9 @@
     letter-spacing: 1.4px;
     text-transform: uppercase;
     color: #a47d5e;
+}
+
+.sandwich-testimonial-picture {
+    max-width: 845px;
+    border: 12px solid #fff;
 }
